working on authentication

--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
 	"author": "Manoj Santra",
 	"license": "MIT",
 	"dependencies": {
+		"bcryptjs": "^3.0.2",
 		"class-sanitizer": "^1.0.1",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.14.1",
+		"colors": "^1.4.0",
 		"cors": "^2.8.5",
+		"cross-env": "^7.0.3",
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
 		"helmet": "^6.0.1",
@@ -16,12 +19,19 @@
 		"mongoose": "^6.9.0",
 		"morgan": "^1.10.0",
 		"nodemailer": "^6.9.16",
-		"validator": "^13.12.0"
+		"passport": "^0.7.0",
+		"passport-google-oauth20": "^2.0.0",
+		"passport-jwt": "^4.0.1",
+		"pg": "^8.14.1",
+		"sequelize": "^6.37.6",
+		"validator": "^13.12.0",
+		"winston": "^3.17.0",
+		"winston-daily-rotate-file": "^5.0.0"
 	},
 	"scripts": {
 		"test": "eslint --ext .ts --ignore-path .gitignore .",
 		"start": "npm run build  && node dist/src/index.js",
-		"dev": "nodemon src/index.ts --ignore ./dist/",
+		"dev": " nodemon src/index.ts --ignore ./dist/ && cross-env NODE_ENV=dev",
 		"build": "rimraf dist && tsc ",
 		"lint": "eslint --fix --ext .ts --ignore-path .gitignore ."
 	},
@@ -33,6 +43,9 @@
 		"@types/morgan": "^1.9.4",
 		"@types/node": "^18.11.18",
 		"@types/nodemailer": "^6.4.16",
+		"@types/passport": "^1.0.17",
+		"@types/passport-google-oauth20": "^2.0.16",
+		"@types/passport-jwt": "^4.0.1",
 		"@types/validator": "^13.12.2",
 		"@typescript-eslint/eslint-plugin": "^5.18.0",
 		"@typescript-eslint/parser": "^5.18.0",
