--- a/.env.dev
+++ b/.env.dev
@@ -1,8 +1,16 @@
 POSTGRES_PORT=5432
 POSTGRES_HOST=localhost
-POSTGRES_PASSWORD=manoj1234
+POSTGRES_PASSWORD=chaku
 POSTGRES_USER=postgres
-POSTGRES_DATABASE=postgres
+POSTGRES_DATABASE=trimly
 LOG_DIR = ../../logs
-KARYAM_GATEWAY_TOKEN=1a2e7cfa-3787-4226-84a3-14eac989cdab9a6517b6-7ec4-4909-b261-c9e2997d6d1f
-AUTH_SERVER_GATEWAY_SIGNATURE=6f44ff4c-1257-4c4c-8c84-999da01b8a382e2e2c01-3da5-4f84-921a-56d629be1aa7a31dfb9a-b091-4627-9fd2-394786fd9d4a
+ACCESS_TOKEN_SECRET=1a2e7cfa-3787-4226-84a3-14eac989cdab9a6517b6-7ec4-4909-b261-c9e2997d6d1f
+REFRESH_TOKEN_SECRET=6f44ff4c-1257-4c4c-8c84-999da01b8a382e2e2c01-3da5-4f84-921a-56d629be1aa7a31dfb9a-b091-4627-9fd2-394786fd9d4a
+NODE_ENV=developement
+DEFAULT_SCHEMA=public
+EMAIL_USERNAME=santramanoj1997@gmail.com
+EMAIL_PASSWORD=itnz kmxy pbph hgqt
+CLOUDINARY_API_SECRET=S4uto0GBFpAK4BXK4eA_K3nq8tM
+CLOUDINARY_API_KEY=733457429579169
+CLOUDINARY_CLOUD_NAME=dosrlannk
+DATABASE_URL=mongodb+srv://manojdb:santramanoj@cluster0.q9f02.mongodb.net/santra_notes?retryWrites=true&w=majority
