--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
 	"author": "Manoj Santra",
 	"license": "MIT",
 	"dependencies": {
+		"bcrypt": "^6.0.0",
 		"bcryptjs": "^3.0.2",
 		"class-sanitizer": "^1.0.1",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.14.1",
+		"cloudinary": "^2.7.0",
 		"colors": "^1.4.0",
+		"cookie-parser": "^1.4.7",
 		"cors": "^2.8.5",
 		"cross-env": "^7.0.3",
 		"dotenv": "^16.0.3",
@@ -24,6 +27,9 @@
 		"passport-jwt": "^4.0.1",
 		"pg": "^8.14.1",
 		"sequelize": "^6.37.6",
+		"swagger-jsdoc": "^6.2.8",
+		"swagger-ui-express": "^5.0.1",
+		"uuid": "^13.0.0",
 		"validator": "^13.12.0",
 		"winston": "^3.17.0",
 		"winston-daily-rotate-file": "^5.0.0"
@@ -33,19 +39,27 @@
 		"start": "npm run build  && node dist/src/index.js",
 		"dev": " nodemon src/index.ts --ignore ./dist/ && cross-env NODE_ENV=dev",
 		"build": "rimraf dist && tsc ",
-		"lint": "eslint --fix --ext .ts --ignore-path .gitignore ."
+		"lint": "eslint --fix --ext .ts --ignore-path .gitignore .",
+		"run-docker-detach": "docker run -p 5000:5000 -d santranotes-backend",
+		"run-docker": "docker run -p 5000:5000  santranotes-backend",
+		"build-docker": "docker build -t santranotes-backend ."
 	},
 	"devDependencies": {
+		"@types/bcrypt": "^6.0.0",
+		"@types/cookie-parser": "^1.4.10",
 		"@types/cors": "^2.8.13",
 		"@types/express": "^4.17.16",
 		"@types/jsonwebtoken": "^9.0.7",
 		"@types/mongoose": "^5.11.97",
 		"@types/morgan": "^1.9.4",
+		"@types/multer": "^2.0.0",
 		"@types/node": "^18.11.18",
 		"@types/nodemailer": "^6.4.16",
 		"@types/passport": "^1.0.17",
 		"@types/passport-google-oauth20": "^2.0.16",
 		"@types/passport-jwt": "^4.0.1",
+		"@types/swagger-jsdoc": "^6.0.4",
+		"@types/swagger-ui-express": "^4.1.8",
 		"@types/validator": "^13.12.2",
 		"@typescript-eslint/eslint-plugin": "^5.18.0",
 		"@typescript-eslint/parser": "^5.18.0",
@@ -57,6 +71,7 @@
 		"nodemon": "^2.0.20",
 		"prettier": "^2.6.2",
 		"rimraf": "^4.1.2",
+		"sequelize-cli": "^6.6.3",
 		"ts-node-dev": "^2.0.0",
 		"typescript": "^4.9.4"
 	}
